--- a/app/setupassets/views/layout.jade
+++ b/app/setupassets/views/layout.jade
@@ -1,13 +1,23 @@
 html
   head
-    title= Setup page
+    title Bleep setup
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
+
     // bower:css
     link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap.css')
     // endbower
 
-    meta(name="viewport", content="width=device-width, initial-scale=1")
+    link(rel='stylesheet', href='/setup/css/main.css')
     block pagecss
   body
+    .container
+      .header
+        h3.text-muted Bleep
+
+      block content
+
     // bower:js
     script(src='bower_components/jquery/dist/jquery.js')
     script(src='bower_components/angular/angular.js')
