Completed static manager

--- a/app/setupassets/views/layout.jade
+++ b/app/setupassets/views/layout.jade
@@ -9,12 +9,14 @@ html
     link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap.css')
     // endbower
 
+    link(href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic',
+     rel='stylesheet' type='text/css')
     link(rel='stylesheet', href='/setup/css/main.css')
     block pagecss
   body
     .container
       .header
-        h3.text-muted Bleep
+        h1 Bleep
 
       block content
 
