--- a/app/setupassets/public/css/main.css
+++ b/app/setupassets/public/css/main.css
@@ -2,6 +2,12 @@
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  font-size: x-large;
+  font-family: 'Arvo';
+}
+
+h1 {
+  font-size: 50px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -12,17 +18,17 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
+  /*border-bottom: 1px solid #e5e5e5; */
 }
 
 /* Customize container */
 @media (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 750px;
   }
 }
 .container-narrow > hr {
-  margin: 30px 0;
+  margin: 30px 10px;
 }
 
 
