--- a/app/setupassets/views/index.jade
+++ b/app/setupassets/views/index.jade
@@ -8,7 +8,7 @@ block content
 
   hr
 
-  form(role="form")
+  form(role="form", method="post", action="/setup")
     h3 Who are you?
     div.form-group
       label(for="title") Blog title
