--- a/app/assets/themes/default/layout.jade
+++ b/app/assets/themes/default/layout.jade
@@ -1,6 +1,6 @@
 html
   head
-    title Bleep setup
+    title= blogname
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1")
@@ -16,7 +16,8 @@ html
   body
     .container
       .header
-        h1 Bleep
+        h1= blogname
+      hr
 
       block content
 
