--- a/app/setupassets/views/index.jade
+++ b/app/setupassets/views/index.jade
@@ -27,6 +27,7 @@ block content
     hr
 
     h3 Where is your mongod now?
+    h4 Note: The specified database will be wiped to store Bleep data 
 
     div.form-group
       label(for="host") Host 
