--- a/app/assets/themes/default/layout.jade
+++ b/app/assets/themes/default/layout.jade
@@ -19,6 +19,12 @@ html
         h1= blogname
       hr
 
+      .container
+        - if (messages) {
+          each message in messages
+            div(class="alert alert-#{message.type}")= message.message
+        - }
+
       block content
 
     // bower:js
