--- a/app/assets/themes/default/admin.jade
+++ b/app/assets/themes/default/admin.jade
@@ -1,11 +1,20 @@
 extends layout
 
+block pagecss
+  link(rel="stylesheet", href="/static/css/adminpost.css")
+
+block pagejavascript
+  script(src="/static/js/administration.js")
+
 block content
   - if (posts.length == 0) {
     h4 Looks like there's nothing here :(
   - }
 
   each post in posts
-    h3= post.title
-    h6.text-muted.small Posted on #{post.dateModified}
-    p!= post.content
+    div(id="post#{post.id}")
+      h3= post.title
+      h6.text-muted.small Posted on #{post.dateModified}
+      p!= post.content
+      a.edit(href="#") edit 
+      a.delete(href="#") delete
