Fixed deletion bug

--- a/app/assets/themes/default/admin.jade
+++ b/app/assets/themes/default/admin.jade
@@ -4,7 +4,7 @@ block pagecss
   link(rel="stylesheet", href="/static/css/adminpost.css")
 
 block pagejavascript
-  script(src="/static/js/administration.js")
+  script(src="/js/administration.js")
 
 block content
   - if (posts.length == 0) {
