--- a/app/assets/themes/default/index.jade
+++ b/app/assets/themes/default/index.jade
@@ -6,7 +6,16 @@ block content
   - }
 
   each post in posts
-    div(id="post#{post.id}")
-      h3= post.title
+    div(id="post#{post.id}", class="post")
+      h3
+        a(href="#").postTitle= post.title
       h6.text-muted.small Posted on #{post.dateModified}
       p!= post.content
+      h4 
+        a(href="#") #{post.comments.length} comments
+
+  - if (more) {
+    h3.additionalLinks 
+      a(href="#")#archive More
+      a(href="/posts/#{nextPage}")#more Archive
+  - }
