--- a/app/assets/themes/default/layout.jade
+++ b/app/assets/themes/default/layout.jade
@@ -16,7 +16,8 @@ html
   body
     .container
       .header
-        h1= blogname
+        h1
+          a(href="/")= blogname
       hr
 
       .container
