--- a/app/assets/themes/default/static/css/main.css
+++ b/app/assets/themes/default/static/css/main.css
@@ -22,6 +22,23 @@ body {
   /*border-bottom: 1px solid #e5e5e5; */
 }
 
+.additionalLinks {
+  float: right;
+}
+
+#archive {
+  display: inline-block;
+  padding: 0px 30px;
+}
+
+.post {
+  padding: 10px 0px;
+}
+
+.postTitle {
+  color: black;
+}
+
 /* Customize container */
 @media (min-width: 768px) {
   .container {
