Added archive pages

--- a/app/assets/themes/default/index.jade
+++ b/app/assets/themes/default/index.jade
@@ -16,6 +16,6 @@ block content
 
   - if (more) {
     h3.additionalLinks 
-      a(href="#")#archive More
-      a(href="/posts/#{nextPage}")#more Archive
+      a(href="/archive")#archive Archive
+      a(href="/posts/#{nextPage}")#more More
   - }
