--- a/app/assets/themes/default/index.jade
+++ b/app/assets/themes/default/index.jade
@@ -8,11 +8,11 @@ block content
   each post in posts
     div(id="post#{post.id}", class="post")
       h3
-        a(href="#").postTitle= post.title
+        a(href="/post/#{post.id}").postTitle= post.title
       h6.text-muted.small Posted on #{post.dateModified}
       p!= post.content
       h4 
-        a(href="#") #{post.comments.length} comments
+        a(href="/post/#{post.id}") #{post.comments.length} comments
 
   - if (more) {
     h3.additionalLinks 
