--- a/app/assets/themes/default/layout.jade
+++ b/app/assets/themes/default/layout.jade
@@ -28,6 +28,9 @@ html
 
       block content
 
+      .footer
+        p A super fabulous Bleep blog
+
     // bower:js
     script(src='/bower_components/jquery/jquery.js')
     script(src='/bower_components/angular/angular.js')
