--- a/app/assets/themes/default/static/css/adminpost.css
+++ b/app/assets/themes/default/static/css/adminpost.css
@@ -7,3 +7,25 @@ a.delete {
   display: inline-block;
   padding-left: 10px;
 }
+
+a#logout {
+  display: inline-block;
+  padding-right: 10px;
+}
+
+#options {
+  float: left;
+}
+
+#options h3 {
+  margin-top: 0px;
+  padding-top: 0px;
+}
+
+#newPost {
+  float: right;
+}
+
+#posts {
+  clear: both;
+}
