--- a/app/assets/themes/default/layout.jade
+++ b/app/assets/themes/default/layout.jade
@@ -29,7 +29,8 @@ html
       block content
 
       .footer
-        p A super fabulous Bleep blog
+        p Built with 
+          a(href="https://github.com/bayofpigs/bleep") Bleep
 
     // bower:js
     script(src='/bower_components/jquery/jquery.js')
