--- a/app/assets/themes/default/post.jade
+++ b/app/assets/themes/default/post.jade
@@ -5,13 +5,13 @@ block pagecss
 
 block content
   div#content
-    h1= post.title
+    h3= post.title
     h6.text-muted.small Posted on #{post.dateModified}
-    p= post.content
+    p!= post.content
 
   hr
 
-  h3 Comments (#{post.comments.length})
+  h4 Comments (#{post.comments.length})
 
   div#comments
     each comment in post.comments
